# auto-jrubby

./: .gitattributes  Cargo.toml  README.md
package/: README.md  lib.typ  typst.toml
src/: lib.rs
wasm-plugin/ipadic-neologd/: Cargo.toml
wasm-plugin/ipadic/src/: lib.rs
wasm-plugin/unidic/: Cargo.toml
wasm-plugins/ipadic/: Cargo.toml
wasm-plugins/ipadic-neologd/src/: lib.rs
wasm-plugins/ipadic/src/: lib.rs
wasm-plugins/unidic/: Cargo.toml
wasm-plugins/unidic/src/: lib.rs
