[package]
name = "unidic"
version = "0.1.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
lindera = { git = "https://github.com/rice8y/lindera_fork", features = ["embedded-unidic"] }
wasm-minimal-protocol = { git = "https://github.com/astrale-sharp/wasm-minimal-protocol" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.18"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true